[package]
name = "imbe"
version = "1.0.0"
authors = ["Mick Koch <mick@kochm.co>"]

[dependencies]

arrayvec = "^0.3.12"
collect_slice = "^1.0.0"
crossbeam = "^0.2.10"
map_in_place = {version = "^1.0.0", git = "https://github.com/kchmck/map_in_place.rs"}
num = "^0.1.34"
quad_osc = {version = "^2.0.0", git = "https://github.com/kchmck/quad_osc.rs"}
rand = "^0.3"
